Configure CompactionStack